@@ -1,7 +1,7 @@
 package com.flink.platform.udf;
 
 import com.flink.platform.common.constants.Constant;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
@@ -9,23 +9,23 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 /** Unit test for simple App. */
-public class UdfTest {
+class UdfTest {
     @Test
-    public void test0() {
+    void test0() {
         System.out.println(Arrays.toString("a|b|c".split(Constant.OR)));
         System.out.println(Arrays.toString("a&b&c".split(Constant.AND)));
     }
 
     @Test
-    public void test1() {
+    void test1() {
         List<Integer> integers = Arrays.asList(1, 2, 3);
         integers.contains("a");
-        Class<?> aClass = integers.get(0).getClass();
+        Class<?> aClass = integers.getFirst().getClass();
         System.out.println(aClass);
     }
 
     @Test
-    public void test2() {
+    void test2() {
         Pattern p = Pattern.compile("(^\\d{4}-\\d{1,2}-\\d{1,2})");
 
         String date = "1990-03-21";
